# health-compass

./: .gitignore  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
backend/: .env.example  IDENTITY_STAGE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/scripts/: import_clinical_dictionary_seed.py
backend/tests/: conftest.py  test_account_link_notifications.py  test_account_linking.py  test_account_linking_migrations.py  test_account_linking_postgres.py  test_basic_health_profile_rls.py  test_clamav_client.py  test_clinical_context_hardening.py  test_clinical_context_http.py  test_clinical_context_migration.py  test_clinical_context_rls.py  test_clinical_context_schemas.py  test_clinical_delete_privileges.py  test_clinical_dictionary.py  test_clinical_dictionary_integrity_postgres.py  test_clinical_dictionary_privileges.py  test_clinical_dictionary_seed.py  test_clinical_dictionary_seed_upsert_postgres.py  test_clinical_erasure_rls.py  test_clinical_erasure_schemas.py  test_clinical_review_rls.py  test_clinical_review_state_schemas.py  test_config.py  test_contextual_intake_privileges.py  test_contextual_intake_schemas.py  test_document_intake_http.py  test_document_intake_rls.py  test_document_ocr_review_rls.py  test_document_ocr_review_schemas.py  test_document_ocr_rls.py  test_document_reconciliation_rls.py  test_document_rendering_rls.py  test_document_storage.py  test_document_upload_limit.py  test_document_worker_rls.py  test_duplicate_activity_schema_sync_postgres.py  test_encrypted_object_paths.py  (+40 more)
(+382 files in other folders)
